[package]
name = "freq"
version = "0.8.0"
readme = "README.md"
repository = "https://github.com/ryancdotorg/freq"
description = "A command line tool for counting frequency of items and showing related statistics."
license = "GPL-2.0-only OR GPL-3.0-only"
categories = ["command-line-utilities"]
authors = ["Ryan Castellucci <code@ryanc.org>"]
edition = "2021"
resolver = "2"
exclude = ["*.sh"]

[dependencies]
clap = { version = "4", features = ["derive"] }
counter = { version = "0.6" }
build-info = "0"
semver = "1"

regex = { version = "1", optional = true }
fancy-regex = { version = "0.14", optional = true }

bzip2 = { version = "0.5", optional = true }
flate2 = { version = "1.0", optional = true }
lz4_flex = { version = "0.11", optional = true }
xz2 = { version = "0.1", optional = true }
zstd = { version = "0.13", optional = true }

[build-dependencies]
build-info = "0"
build-info-build = "0"
git2 = { version = "0.20.2", default-features = false }

[features]
default = ["egg", "ungz", "regex-basic"]
all = ["decompress", "regex-fancy"]
full = ["all"]

regex = ["regex-basic"]
regex-basic = ["dep:regex", "_regex"]
regex-fancy = ["dep:fancy-regex", "_regex"]
_regex = []

decompress = ["unbz2", "ungz", "unlz4", "unxz", "unzstd"]
unbz2 = ["dep:bzip2", "_any_decompress"]
ungz = ["dep:flate2", "_any_decompress"]
unlz4 = ["dep:lz4_flex", "_any_decompress"]
unxz = ["dep:xz2", "_any_decompress"]
unzstd = ["dep:zstd", "_any_decompress"]
_any_decompress = []

egg = []

[[bin]]
name = "freq"
test = false
bench = false

[profile.lto]
inherits = "release"
lto = true
