[package]
name = "freq"
version = "0.8.0"
readme = "README.md"
repository = "https://github.com/ryancdotorg/freq"
description = "A command line tool for counting frequency of items and showing related statistics."
license = "GPL-2.0-only OR GPL-3.0-only"
categories = ["command-line-utilities"]
authors = ["Ryan Castellucci <code@ryanc.org>"]
edition = "2021"
resolver = "2"
exclude = ["*.sh"]

[dependencies]
clap = { version = "4", features = ["derive"] }
counter = { version = "0.6" }
build-info = "0"
semver = "1"

regex = { version = "1", optional = true }
fancy-regex = { version = "0.14", optional = true }

bzip2 = { version = "0.5", optional = true }
flate2 = { version = "1.0", optional = true }
lz4_flex = { version = "0.11", optional = true }
xz2 = { version = "0.1", optional = true }
zstd = { version = "0.13", optional = true }

[build-dependencies]
build-info = "0"
build-info-build = "0"
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2.26"
git2 = { version = "0.20.2", default-features = false }

[features]
default = ["egg", "gz", "regex-basic"]
all = ["decompress", "regex-fancy"]
full = ["all"]

regex = ["regex-basic"]
regex-basic = ["dep:regex", "_regex"]
regex-fancy = ["dep:fancy-regex", "_regex"]
_regex = []

decompress = ["bz2", "gz", "lz4", "xz", "zstd"]
bz2 = ["dep:bzip2", "_any_decompress"]
gz = ["dep:flate2", "_any_decompress"]
lz4 = ["dep:lz4_flex", "_any_decompress"]
xz = ["dep:xz2", "_any_decompress"]
zstd = ["dep:zstd", "_any_decompress"]
_any_decompress = []

egg = []

[[bin]]
name = "freq"
test = false
bench = false

[profile.lto]
inherits = "release"
lto = true
